[tool.poetry]
name = "codeexamples"
version = "0.1.0"
description = ""
authors = ["kalitka <zavorotnii.dr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.13.2"
centerline = "^1.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
